# Euzebia3D

./: .gitignore  CMakeLists.txt  Euzebia3D.c  README.md  RENDERING_GUIDE_EN.md  RENDERING_GUIDE_PL.md  main_windows.c  pico_extras_import.cmake
assets/: triangle.blend  triangle.blend1
libs/: CMakeLists.txt
libs/arithmetics/: fpa.c  fpa.h  lookup_tables.c  lookup_tables.h  vectors.c  vectors.h
libs/cameraFactory/: ICameraFactory.h  camera.c  camera.h  cameraFactory.c
libs/debugMode/: IDebugMode.h  debugMode.c  debugMode.h
libs/display/: display.c  display.h
libs/file_reader/: fileReader.c
libs/file_reader/fatfs/: diskio.c
libs/file_reader/sd_driver/: sd_driver.c
libs/hardware/: IHardware.h  hardware.c  hardware.h
libs/lightFactory/: light.h  lightFactory.c
libs/meshFactory/: IMeshFactory.h  mesh.c  mesh.h  meshFactory.c
libs/painter/: IPainter.h  gradient.c  gradient.h  painter.c  painter.h  painter_types.h
libs/puppetFactory/: IPuppetFactory.h  animation.c  animation.h  puppet.c  puppet.h  puppetFactory.c
libs/puppeteer/: IPuppetFactory.h  IPuppeteer.h  puppet.c  puppet.h  puppetCalc.c  puppetCalc.h  puppetFactory.c  puppetFactory.h  puppeteer.c  puppeteer.h
libs/renderer/: IRenderer.h  renderer.c  renderer.h
libs/shared/: fonts.c  gfx.c  post_processing.c  post_processing.h  rawPuppets.c  scrollers.h  sprites.c  sprites.h
libs/storage/: IStorage.h  fonts.h  gfx.c  gfx.h  post_processing.h  rawPuppets.c  rawPuppets.h  scrollers.c  scrollers.h  sprites.c  sprites.h
libs/transformations/: transformations.c  transformations.h
storage/: fonts.c  gfx.c  post_processing.c  rawPuppets.c  scrollers.c  sprites.c  storage.c  storage.h
tools/: barrel_distortion.py  bmp_converter.py  bmp_exporter.py  build_windows_clean.ps1  calc_margin.py  font_exporter.py  img_converted.txt  init_sin_cos.py  obj_exporter.py  sin_cos_atan.txt  texture_converter.py
